--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8404
+#server.port=8404
 #server.ssl.key-alias=connectWorld
 #server.ssl.key-store-type=JKS
 #server.ssl.key-password=password
