--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.ssl.key-alias=connectWorld
-server.ssl.key-store-type=JKS
-server.ssl.key-password=password
-server.ssl.key-store=classpath:connectWorld.jks
+#server.ssl.key-alias=connectWorld
+#server.ssl.key-store-type=JKS
+#server.ssl.key-password=password
+#server.ssl.key-store=classpath:connectWorld.jks
 
